<resources>
    <string name="app_name">alif</string>
    <string name="ContentDescription">Logo do aplicativo</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="digite_seu_cpf_cnpj">Digite seu CPF ou CNPJ aqui!</string>
    <string name="digite_seu_email">Digite seu email aqui</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha_aqui">Digite sua senha aqui</string>
    <string name="modo">Como você deseja acessar?</string>
    <string name="cliente">Cliente</string>
    <string name="lojista">Administrador</string>
    <string name="cadastrar_se">Criar conta</string>
    <string name="entrar">Entrar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seja_bem_vindo">Seja Bem Vindo!</string>
    <string name="selecione_uma_categoria">Selecione uma Categoria</string>
    <string name="nome">Nome</string>
    <string name="cadastro_pessoa_fisica">Cadastro Pessoa Física</string>
    <string name="digite_seu_nome_aqui" translatable="false">Digite seu nome aqui</string>
    <string name="seja_bem_vindo_para_continuarmos_vou_precisar_de_alguns_dados_seu" translatable="false">Seja Bem Vindo, para continuarmos vou precisar de alguns dados seu…</string>
    <string name="cpf" translatable="false">CPF</string>
    <string name="salvar" translatable="false">Salvar</string>
    <string name="print">Imprimir</string>
    <string name="share">Compartilhar</string>
    <string name="atualizar" translatable="false">Atualizar</string>
    <string name="salvar_alteracoes" translatable="false">Salvar Alterações</string>
    <string name="digite_seu_cpf_aqui">Digite seu CPF aqui</string>
    <string name="digite_seu_n_mero_de_celular_aqui">Digite seu número de celular aqui</string>
    <string name="celular">Celular</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="digite_sua_data_de_nascimento_aqui">Digite sua data de nascimento aqui</string>
    <string name="digite_seu_cpf_ou_cnpj_aqui">Digite seu CPF ou CNPJ aqui</string>
    <string name="digite_o_nome_da_sua_empresa_aqui">Digite o nome da sua empresa aqui</string>
    <string name="nome_da_empresa">Nome da Empresa</string>
    <string name="cadastro_lojista">Cadastro Lojista</string>
    <string name="cnpj">CNPJ</string>
    <string name="selecione_o_documento_desejado">Selecione o documento desejado</string>
    <string name="digite_novamente_a_senha">Digite novamente a senha</string>
    <string name="email">Email</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="password_invalid_error">Por favor, sua senha precisa ter pelo menos 8 caracteres, sendo eles: números, caracteres especiais(@,$,!,%,*,#,?,&amp;,+,-) e letra maiuscula</string>
    <string name="email_invalid_error">Digite um email válido</string>
    <string name="passwordTwo_invalid_error">senha inválida, digite a mesma senha do campo anterior</string>
    <string name="cpf_invalid_error">CPF Inválido, digite um CPF válido para prosseguir</string>
    <string name="cnpj_invalid_error">CNPJ Inválido, digite um CNPJ válido para prosseguir</string>
    <string name="date_invalid_error">Data de Nascimento inválida</string>
    <string name="email_ja_existe">Email já cadastrado!</string>
    <string name="cadastrado_sucesso">Cadastrado com sucesso!</string>
    <string name="erro_cadastrar">Erro ao cadastrar!</string>
    <string name="erro_autenticacao">Erro na Autenticação</string>
    <string name="search_hint">Pesquise nome de filas ou nome de empresas</string>
    <string name="minhas_filas">Minhas Filas:</string>
    <string name="erro_pegar_fila">Erro ao obter suas filas :(</string>
    <string name="inicio">Início</string>
    <string name="perfil">Perfil</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="Favoritos">Favoritos</string>
    <string name="configuracao">Configuração</string>
    <string name="acessar">Acessar</string>
    <string name="funcionarios">Funcionários</string>
    <string name="filas">Filas</string>
    <string name="fila">Fila</string>
    <string name="nome_da_fila">Nome da Fila:</string>
    <string name="digite_o_nome_da_fila">Digite o nome da fila</string>
    <string name="n_mero_m_ximo_de_pessoas">Número máximo de pessoas:</string>
    <string name="tempo_a_ser_atendido">Tempo médio até ser atendido:</string>
    <string name="digite_o_tempo_m_dio_a_ser_atendido">Digite o tempo médio a ser atendido</string>
    <string name="horario_de_abertura_da_fila">Horário de abertura da fila</string>
    <string name="digite_o_horario_de_abertura_da_fila">Digite o horário de abertura da fila</string>
    <string name="selecione_o_horario">Selecione o horário</string>
    <string name="horario_de_fechamento_da_fila">Horário de Fechamento da fila</string>
    <string name="documento">Documento</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="ocupacao">Ocupação</string>
    <string name="btn_criar_fila">Criar Nova Fila</string>
    <string name="excluir">Excluir</string>
    <string name="excluido_sucesso">Excluido com Sucesso</string>
    <string name="btn_criar_funcionario">Cadastrar Funcionário</string>
    <string name="funcionario">Funcionário</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="digite_o_nome_completo">Digite o nome completo</string>
    <string name="cargo">Cargo</string>
    <string name="digite_o_cargo_do_funcionario">Digite o cargo do funcionário</string>
    <string name="detalhe_da_fila">Detalhe da Fila</string>
    <string name="quantidade_placeholder">Quantidade Máxima: %s</string>
    <string name="minutosMedia_placeholder">Minutos em Média: %s</string>
    <string name="total_pessoas_fila">Total de Pessoas na Fila: %s</string>
    <string name="pessoas">%s pessoas</string>
    <string name="tempo_para_ser_atendido">%s min em média</string>
    <string name="inserido_com_sucesso_na_fila">Cadastrado com sucesso na Fila!</string>
    <string name="ja_cadastrado_na_fila">Já cadastrado na Fila</string>
    <string name="erro_cadastrar_na_fila">Erro ao se cadastrar na Fila :(</string>
    <string name="companies_title">Empresas</string>
    <string name="company_form_title">Formulário de Empresa</string>
    <string name="queue_form_title">Formulário de Fila</string>
    <string name="nome_fantasia_tv">Nome Fantasia</string>
    <string name="nome_proprietario_tv">Nome proprietário</string>
    <string name="telefone_tv">Telefone</string>
    <string name="rua_tv">Rua</string>
    <string name="bairro_tv">Bairro</string>
    <string name="numero_tv">Número</string>
    <string name="cidade_tv">Cidade</string>
    <string name="cep_tv">Cep</string>
    <string name="cnpj_tv">CNPJ</string>
    <string name="category_tv">Categoria</string>
    <string name="employee_responsible">Funcionário Responsável</string>
    <string name="complemento_tv">Complemento</string>
    <string name="company_title">Empresa</string>
    <string name="company_subtitle">Agora precisamos de algumas informações sobre a empresa.</string>
    <string name="uf_tv">Uf</string>
    <string name="category_name">Título da categoria</string>
    <string name="category_title">Categoria</string>
    <string name="first_options_title">Opções iniciais</string>
    <string name="consumer_profile_name">Nome</string>
    <string name="consumer_profile_email">Email</string>
    <string name="consumer_profile_document">CPF</string>
    <string name="consumer_profile_birthday">Data de Nascimento</string>
    <string name="consumer_profile_cellphone">Celular</string>
    <string name="delete_employee_error">Não é possível excluir a si próprio da empresa!</string>
    <string name="current_password">Senha Atual</string>
    <string name="new_password">Senha Nova</string>
    <string name="confirm_new_password">Confirme Senha Nova</string>
    <string name="current_password_section">Digite aqui a senha usada atualmente no login.</string>
    <string name="new_password_section">Digite aqui a nova senha que você deseja utilizar para realizar o login no aplicativo, após isso confirme a senha digitando novamente</string>
    <string name="update_password_error"><![CDATA[Erro! Verifique as senhas preenchidas]]></string>
    <string name="mycategories_title">Minhas Categorias</string>
    <string name="edit_category">Editar Categoria</string>
    <string name="delete_category">Excluir Categoria</string>
    <string name="average_time">Tempo Médio (em minuto)</string>
    <string name="closing_time">Hora de Fechamento</string>
    <string name="opening_time">Hora de Abertura</string>
    <string name="name_queue">Nome da Fila</string>
    <string name="quantity_queue">Quantidade Limite</string>
    <string name="status_queue">Status da Fila</string>
    <string name="description_queue">Descrição</string>
    <string name="queues_title">Filas</string>
    <string name="queues_configuration">Configure suas Filas</string>
    <string name="queues_query_hint">Pesquise suas filas aqui</string>
    <string name="configuration_page">Configurações</string>
    <string name="qrcode_page">Meu QR-Code</string>
    <string name="queue_status"><![CDATA[<b>Status: </b>%s]]></string>
    <string name="queue_will_open"><![CDATA[<b>Abre às: </b>%s]]></string>
    <string name="queue_opened"><![CDATA[<b>Abriu às: </b>%s]]></string>
    <string name="queue_will_close"><![CDATA[<b>Fecha às: </b>%s]]></string>
    <string name="queue_closed"><![CDATA[<b>Fechou às: </b>%s]]></string>
    <string name="quantity_total"><![CDATA[<b>Quantidade Total: </b>%s]]></string>
    <string name="queue_available_quantity"><![CDATA[Quantidade Disponível: <b>%s</b>]]></string>
    <string name="queue_title">Fila</string>
    <string name="opened_status">Aberto</string>
    <string name="opened_status_button">Abrir Fila</string>
    <string name="closed_status">Fechado</string>
    <string name="closed_status_button">Fechar Fila</string>
    <string name="pendent_status">Pendente</string>
    <string name="call_detail_dialog_title">Escolha uma das opções disponíveis:</string>
    <string name="status_to_finish">Finalizar Atendimento</string>
    <string name="status_in_progress">Atendimento em Andamento</string>
    <string name="status_in_hold">Atendimento em Espera</string>
    <string name="employee_screen_search">Pesquise seus funcionários aqui</string>
    <string name="employee_screen_title">Meus Funcionários</string>
    <string name="employee_screen_dialog_message">Tem certeza que deseja excluir esse funcionário? Essa ação é irreversível.</string>
    <string name="employee_screen_new_hint">Pesquise um novo funcionário pelo cpf</string>
    <string name="employee_screen_new_title">Novo Funcionário</string>
    <string name="employee_waiting_status">Aguardando Aceite</string>
    <string name="employee_refused_status">Recusado pelo Usuário</string>
    <string name="employee_accepted_status">Meus Funcionários</string>
    <string name="my_queues_consumer_position">#%s</string>
    <string name="my_queues_consumer_position_in_progress">Em Andamento</string>
    <string name="my_queues_estimated_time">Tempo Estimado: %s</string>
    <string name="queue_consumer_average_time_message"><![CDATA[<b>%s min<br>em média</b><br>para ser atendido.]]></string>
    <string name="queue_consumer_quantity_before_me"><![CDATA[<b>%s<br>pessoas</b><br>na fila]]></string>
    <string name="queue_consumer_button_subscribe">Inscrever-se</string>
    <string name="queue_consumer_button_cancel">Cancelar Inscrição</string>
    <string name="warning">Atenção!</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="RJ">Rio de Janeiro</string>
    <string name="MG">Minas Gerais</string>
    <string name="SP">São Paulo</string>
</resources>