<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:background="@drawable/card_main"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="188dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/ContentDescription"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cpf_cnpj"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:autofillHints=""
            android:hint="@string/digite_seu_email_aqui"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:autofillHints=""
            android:hint="@string/digite_sua_senha_aqui"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/txt_modo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                xmlns:android="http://schemas.android.com/apk/res/android">
                <RadioButton
                    android:id="@+id/cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/lojista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lojista"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />
            </RadioGroup>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:backgroundTint="@color/white"
            android:text="Entrar"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_top"
            android:layout_width="163dp"
            android:layout_height="163dp"
            android:layout_marginTop="567dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/ball" />
    </LinearLayout>

    <View
        android:id="@+id/view_bottom"
        android:layout_width="163dp"
        android:layout_height="163dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="568dp"
        android:background="@drawable/ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>