<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/queueFormSwipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.companies.CompanyFormFragment"
    android:enabled="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameQueueTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_queue"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameQueueEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantityTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_queue"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    android:layout_marginTop="@dimen/margin_default"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantityEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/averageTimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/average_time"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    android:layout_marginTop="@dimen/margin_default"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/averageTimeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_tv"
                    android:layout_marginTop="@dimen/margin_default"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <AutoCompleteTextView
                        android:id="@+id/categoryAc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:theme="@style/EditText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/employeeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_responsible"
                    android:layout_marginTop="@dimen/margin_default"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <AutoCompleteTextView
                        android:id="@+id/employeeAc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:theme="@style/EditText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.tcc.alif.view.base.DateTimePicker
                    android:id="@+id/openingTimeEt"
                    android:layout_marginTop="@dimen/margin_default"
                    app:datehint="@string/opening_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.tcc.alif.view.base.DateTimePicker
                    android:id="@+id/closingTimeEt"
                    android:layout_marginTop="@dimen/margin_default"
                    app:datehint="@string/closing_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/statusTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status_queue"
                    android:layout_marginTop="@dimen/margin_default"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <AutoCompleteTextView
                        android:id="@+id/statusAc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:theme="@style/EditText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_queue"
                    android:textColorHint="@color/black"
                    android:theme="@style/InputLayout"
                    android:layout_marginTop="@dimen/margin_default"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save"
            style="@style/ButtonPrimary"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>